fix: signedUrl support
